--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -22,7 +22,8 @@
     // Modules Left
     "modules-left": [
         "custom/appmenuicon",
-        "hyprland/workspaces"
+        "hyprland/workspaces",
+        "hyprland/window"
     ],
 
     // Modules Center
