--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -24,8 +24,8 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=eDP-1,preferred,auto,auto
-monitor=HDMI-A-1,1920x1080@100,auto,auto
+monitor = eDP-1,preferred,auto,auto
+monitor = HDMI-A-1,1920x1080@100,auto,auto
 
 ###################
 ### MY PROGRAMS ###
@@ -75,7 +75,8 @@ general {
     border_size = 1
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.active_border = rgba(ffcc66bb)
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -106,7 +107,10 @@ decoration {
         size = 3
         passes = 1
         
-        vibrancy = 0.1696
+        #vibrancy = 0.1696
+        vibrancy = 0.25
+        layerrule = blur,waybar
+        layerrule = blur,wofi
     }
 }
 
