--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -190,8 +190,7 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 bind = $mainMod, I, exec, chromium &
-
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+bind = $mainMod, C, exec, code &
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, KP_Enter, exec, $terminal
 bind = $mainMod, Q, killactive,
