--- a/hypr/.config/hypr/hyprpaper.conf
+++ b/hypr/.config/hypr/hyprpaper.conf
@@ -1,3 +1,5 @@
 preload = ~/Images/20240214_231058.jpg
-wallpaper = ,~/Images/20240214_231058.jpg
+preload = ~/Images/20240214_231040.jpg
+wallpaper = eDP-1,~/Images/20240214_231058.jpg
+wallpaper = HDMI-A-1,~/Images/20240214_231040.jpg
 splash = false
