--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -49,7 +49,7 @@ $menu = wofi --show drun
 # exec-once = $terminal
 # exec-once = nm-applet &
 exec-once = waybar & dunst & hyprpaper & 
-
+exec-once = wl-paste -t text --watch clipman store --no-persist
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -137,9 +137,9 @@ dwindle {
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-master {
-    new_is_master = false
-}
+#master {
+#    new_is_master = false
+#}
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc { 
@@ -196,7 +196,7 @@ bind = $mainMod, KP_Enter, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, E, exit,
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
+bind = $mainMod, V, exec, clipman pick -t wofi
 bind = $mainMod, space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
