clipman + better wallpaper

--- a/hypr/.config/hypr/hyprpaper.conf
+++ b/hypr/.config/hypr/hyprpaper.conf
@@ -1,5 +1,5 @@
-preload = ~/Images/20240214_231058.jpg
-preload = ~/Images/20240214_231040.jpg
-wallpaper = eDP-1,~/Images/20240214_231058.jpg
-wallpaper = HDMI-A-1,~/Images/20240214_231040.jpg
+preload = ~/.config/hypr/wallpapers/background.jpg
+preload = ~/.config/hypr/wallpapers/background2.jpg
+wallpaper = eDP-1, ~/.config/hypr/wallpapers/background.jpg
+wallpaper = HDMI-A-1, ~/.config/hypr/wallpapers/background2.jpg
 splash = false
