--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -202,6 +202,14 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod SHIFT, R, exec, killall waybar && waybar &
 
+# hyprshot
+# Screenshot a window
+bind = $shiftMod, PRINT, exec, hyprshot -m window --mode active -o ~/Images
+# Screenshot a monitor
+bind = , PRINT, exec, hyprshot -m output --mode active -o ~/Images
+# Screenshot a region
+bind = $mainMod, PRINT, exec, hyprshot -m region -o ~/Images
+
 # Brightness, volume and audio control
 bind = , XF86AudioMute, exec, pactl set-sink-mute 0 toggle
 bind = , XF86AudioMicMute, exec, pactl set-source-mute 0 toggle
