--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -104,8 +104,8 @@ decoration {
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
-        passes = 1
+        size = 5
+        passes = 2
         
         #vibrancy = 0.1696
         vibrancy = 0.25
@@ -137,9 +137,11 @@ dwindle {
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-#master {
+master {
 #    new_is_master = false
-#}
+    no_gaps_when_only = 1
+    orientation = left
+}
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc { 
@@ -260,26 +262,26 @@ bind = $mainMod SHIFT, up, movewindow, u
 bind = $mainMod SHIFT, down, movewindow, d
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, ampersand, movetoworkspace, 1
-bind = $mainMod SHIFT, KP_End, movetoworkspace, 1
-bind = $mainMod SHIFT, eacute, movetoworkspace, 2
-bind = $mainMod SHIFT, KP_Down, movetoworkspace, 2
-bind = $mainMod SHIFT, quotedbl, movetoworkspace, 3
-bind = $mainMod SHIFT, KP_Next, movetoworkspace, 3
-bind = $mainMod SHIFT, apostrophe, movetoworkspace, 4
-bind = $mainMod SHIFT, KP_Left, movetoworkspace, 4
-bind = $mainMod SHIFT, parentleft, movetoworkspace, 5
-bind = $mainMod SHIFT, KP_Begin, movetoworkspace, 5
-bind = $mainMod SHIFT, minus, movetoworkspace, 6
-bind = $mainMod SHIFT, KP_Right, movetoworkspace, 6
-bind = $mainMod SHIFT, egrave, movetoworkspace, 7
-bind = $mainMod SHIFT, KP_Home, movetoworkspace, 7
-bind = $mainMod SHIFT, underscore, movetoworkspace, 8
-bind = $mainMod SHIFT, KP_Up, movetoworkspace, 8
-bind = $mainMod SHIFT, ccedilla, movetoworkspace, 9
-bind = $mainMod SHIFT, KP_Prior, movetoworkspace, 9
-bind = $mainMod SHIFT, agrave, movetoworkspace, 10
-bind = $mainMod SHIFT, KP_Insert, movetoworkspace, 10
+bind = $mainMod SHIFT, ampersand, movetoworkspacesilent, 1
+bind = $mainMod SHIFT, KP_End, movetoworkspacesilent, 1
+bind = $mainMod SHIFT, eacute, movetoworkspacesilent, 2
+bind = $mainMod SHIFT, KP_Down, movetoworkspacesilent, 2
+bind = $mainMod SHIFT, quotedbl, movetoworkspacesilent, 3
+bind = $mainMod SHIFT, KP_Next, movetoworkspacesilent, 3
+bind = $mainMod SHIFT, apostrophe, movetoworkspacesilent, 4
+bind = $mainMod SHIFT, KP_Left, movetoworkspacesilent, 4
+bind = $mainMod SHIFT, parentleft, movetoworkspacesilent, 5
+bind = $mainMod SHIFT, KP_Begin, movetoworkspacesilent, 5
+bind = $mainMod SHIFT, minus, movetoworkspacesilent, 6
+bind = $mainMod SHIFT, KP_Right, movetoworkspacesilent, 6
+bind = $mainMod SHIFT, egrave, movetoworkspacesilent, 7
+bind = $mainMod SHIFT, KP_Home, movetoworkspacesilent, 7
+bind = $mainMod SHIFT, underscore, movetoworkspacesilent, 8
+bind = $mainMod SHIFT, KP_Up, movetoworkspacesilent, 8
+bind = $mainMod SHIFT, ccedilla, movetoworkspacesilent, 9
+bind = $mainMod SHIFT, KP_Prior, movetoworkspacesilent, 9
+bind = $mainMod SHIFT, agrave, movetoworkspacesilent, 10
+bind = $mainMod SHIFT, KP_Insert, movetoworkspacesilent, 10
 
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
