--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -60,7 +60,6 @@ exec-once = wl-paste -t text --watch clipman store --no-persist
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
-
 #####################
 ### LOOK AND FEEL ###
 #####################
@@ -69,8 +68,8 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general { 
-    gaps_in = 2.5
-    gaps_out = 2.5
+    gaps_in = 1.5
+    gaps_out = 1.5
 
     border_size = 1
 
@@ -90,7 +89,7 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 5 
+    rounding = 0
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
@@ -134,6 +133,8 @@ animations {
 dwindle {
     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = true # You probably want this
+    no_gaps_when_only = 1
+    force_split = 2
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
