--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -59,7 +59,7 @@ exec-once = wl-paste -t text --watch clipman store --no-persist
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-
+env = GTK_THEME,Juno-mirage:dark 
 #####################
 ### LOOK AND FEEL ###
 #####################
