--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -35,7 +35,7 @@ monitor = HDMI-A-1,1920x1080@100,auto,auto
 
 # Set programs that you use
 $terminal = alacritty
-$fileManager = nautilus
+$fileManager = nemo 
 $menu = wofi --show drun
 
 
