--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -296,6 +296,11 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
+bind = $mainMod SHIFT, L, resizeactive, 10 0
+bind = $mainMod SHIFT, H, resizeactive, -10 0
+bind = $mainMod SHIFT, K, resizeactive, 0 -10
+bind = $mainMod SHIFT, J, resizeactive, 0 10
+
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
