--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -60,6 +60,8 @@ exec-once = wl-paste -t text --watch clipman store --no-persist
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 env = GTK_THEME,Juno-mirage:dark 
+# env = ELECTRON_OZONE_PLATFORM_HINT,wayland
+
 #####################
 ### LOOK AND FEEL ###
 #####################
@@ -192,8 +194,8 @@ device {
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
-bind = $mainMod, I, exec, chromium &
-bind = $mainMod, C, exec, code &
+bind = $mainMod, I, exec, chromium --ozone-platform=wayland --disable-gpu
+bind = $mainMod, C, exec, code --ozone-platform=wayland --disable-gpu
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, KP_Enter, exec, $terminal
 bind = $mainMod, Q, killactive,
