--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -197,6 +197,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = $mainMod, I, exec, chromium --ozone-platform=wayland --disable-gpu
 bind = $mainMod, C, exec, code --ozone-platform=wayland --disable-gpu
 bind = $mainMod, Return, exec, $terminal
+bind = $mainMod SHIFT, Return, exec, $terminal --working-directory "$(pwd)"
 bind = $mainMod, KP_Enter, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, E, exit,
@@ -204,7 +205,7 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, exec, clipman pick -t wofi
 bind = $mainMod, space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, T, togglesplit, # dwindle
 bind = $mainMod SHIFT, R, exec, killall waybar && waybar &
 
 # hyprshot
@@ -233,9 +234,13 @@ bind = $mainMod, N, exec, gammastep -O 3000
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
+bind = $mainMod, h, movefocus, l
 bind = $mainMod, right, movefocus, r
+bind = $mainMod, l, movefocus, r
 bind = $mainMod, up, movefocus, u
+bind = $mainMod, k, movefocus, u
 bind = $mainMod, down, movefocus, d
+bind = $mainMod, j, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, ampersand, workspace, 1
