--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -35,7 +35,7 @@ monitor = HDMI-A-1,1920x1080@100,auto,auto
 
 # Set programs that you use
 $terminal = alacritty
-$fileManager = nemo 
+$fileManager = nautilus 
 $menu = wofi --show drun
 
 
@@ -59,8 +59,7 @@ exec-once = wl-paste -t text --watch clipman store --no-persist
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-env = GTK_THEME,Juno-mirage:dark 
-# env = ELECTRON_OZONE_PLATFORM_HINT,wayland
+env = GTK_THEME, Adwaita-dark
 
 #####################
 ### LOOK AND FEEL ###
