--- a/hypr/.config/hypr/hyprpaper.conf
+++ b/hypr/.config/hypr/hyprpaper.conf
@@ -1,10 +1,10 @@
-# preload = ~/.config/hypr/wallpapers/background.jpg
-# preload = ~/.config/hypr/wallpapers/background2.jpg
-# wallpaper = eDP-1, ~/.config/hypr/wallpapers/background.jpg
-# wallpaper = HDMI-A-1, ~/.config/hypr/wallpapers/background2.jpg
-preload = ~/Images/2024-07-03-203703_hyprshot.png
-preload = ~/Images/2024-07-03-195214_hyprshot.png
-wallpaper = eDP-1, ~/Images/2024-07-03-203703_hyprshot.png
-wallpaper = HDMI-A-1, ~/Images/2024-07-03-195214_hyprshot.png
+preload = ~/.config/hypr/wallpapers/background.jpg
+preload = ~/.config/hypr/wallpapers/background2.jpg
+wallpaper = eDP-1, ~/.config/hypr/wallpapers/background.jpg
+wallpaper = HDMI-A-1, ~/.config/hypr/wallpapers/background2.jpg
+#preload = ~/Images/2024-07-03-203703_hyprshot.png
+#preload = ~/Images/2024-07-03-195214_hyprshot.png
+#wallpaper = eDP-1, ~/Images/2024-07-03-203703_hyprshot.png
+#wallpaper = HDMI-A-1, ~/Images/2024-07-03-195214_hyprshot.png
 
 splash = false
