--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,6 @@
+# Check if TERM is not set to alacritty and exit tmux if true
+if-shell '[[ "$TERM" != "alacritty" ]]' 'run "exit"'
+
 unbind r
 unbind C-Tab
 
@@ -12,10 +15,17 @@ bind-key k select-pane -U
 bind-key l select-pane -R
 bind-key x kill-pane
 
+# Bindings to split panes in the current working directory
+bind-key c new-window -c "#{pane_current_path}"
+bind-key % split-window -h -c "#{pane_current_path}"
+bind-key '"' split-window -v -c "#{pane_current_path}"
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
 
 set-option -g status-position top
+set-option -g status-bg default
+
 set -g @catppuccin_window_left_separator ""
 set -g @catppuccin_window_right_separator " "
 set -g @catppuccin_window_middle_separator " █"
@@ -34,5 +44,4 @@ set -g @catppuccin_status_fill "icon"
 set -g @catppuccin_status_connect_separator "no"
 
 set -g @catppuccin_directory_text "#{pane_current_path}"
-
 run '~/.tmux/plugins/tpm/tpm'
