--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -48,6 +48,7 @@ $menu = wofi --show drun
 
 # exec-once = $terminal
 # exec-once = nm-applet &
+# exec-once = hyprlock 
 exec-once = waybar & dunst & hyprpaper & 
 exec-once = wl-paste -t text --watch clipman store --no-persist
 
@@ -59,7 +60,7 @@ exec-once = wl-paste -t text --watch clipman store --no-persist
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-env = GTK_THEME, Adwaita-dark
+env = GTK_THEME, Adwaita-dark:dark
 
 #####################
 ### LOOK AND FEEL ###
