--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -34,7 +34,7 @@ monitor = HDMI-A-1,1920x1080@100,auto,auto
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = alacritty
+$terminal = wezterm
 $fileManager = nautilus 
 $menu = wofi --show drun
 
@@ -60,7 +60,10 @@ exec-once = wl-paste -t text --watch clipman store --no-persist
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-env = GTK_THEME, Adwaita-dark:dark
+env = GTK_THEME, Adwaita:dark
+env = XDG_CURRENT_DESKTOP = Hyprland
+env = XDG_SESSION_TYP = wayland
+env = XDG_SESSION_DESKTOP = hyprland
 
 #####################
 ### LOOK AND FEEL ###
@@ -70,10 +73,10 @@ env = GTK_THEME, Adwaita-dark:dark
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general { 
-    gaps_in = 1.5
-    gaps_out = 1.5
+    gaps_in = 5
+    gaps_out = 5
 
-    border_size = 1
+    border_size = 0
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
@@ -91,27 +94,30 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 0
+    rounding = 10
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
-    inactive_opacity = 1.0
+    inactive_opacity = 0.9
 
     drop_shadow = true
-    shadow_range = 4
+    shadow_offset = 1 2
+    shadow_range = 10
+    shadow_scale = 1
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 5
+        size = 4
         passes = 2
-        
+	ignore_opacity = true
+	new_optimizations = true
         #vibrancy = 0.1696
-        vibrancy = 0.25
-        layerrule = blur,waybar
-        layerrule = blur,wofi
+        #vibrancy = 0.25
+        #layerrule = blur,waybar
+        #layerrule = blur,wofi
     }
 }
 
@@ -135,21 +141,19 @@ animations {
 dwindle {
     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = true # You probably want this
-    no_gaps_when_only = 1
+    #no_gaps_when_only = 1
     force_split = 2
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
-#    new_is_master = false
-    no_gaps_when_only = 1
     orientation = left
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc { 
-    force_default_wallpaper =-1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = true# If true disables the random hyprland logo / anime girl background. :(
+    force_default_wallpaper =1 # Set to 0 or 1 to disable the anime mascot wallpapers
+    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
 }
 
 
