--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,3 @@
-# Check if TERM is not set to alacritty and exit tmux if true
-if-shell '[[ "$TERM" != "alacritty" ]]' 'run "exit"'
-
 unbind r
 unbind C-Tab
 
@@ -42,6 +39,6 @@ set -g @catppuccin_status_left_separator  " "
 set -g @catppuccin_status_right_separator " "
 set -g @catppuccin_status_fill "icon"
 set -g @catppuccin_status_connect_separator "no"
-
+set -g @catppuccin_status_background "default"
 set -g @catppuccin_directory_text "#{pane_current_path}"
 run '~/.tmux/plugins/tpm/tpm'
