--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -41,4 +41,8 @@ set -g @catppuccin_status_fill "icon"
 set -g @catppuccin_status_connect_separator "no"
 set -g @catppuccin_status_background "default"
 set -g @catppuccin_directory_text "#{pane_current_path}"
+
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @resurrect-capture-pane-contents 'on'
+
 run '~/.tmux/plugins/tpm/tpm'
