--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -196,7 +196,7 @@ device {
 ####################
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
-$mainMod = SUPER # Sets "Windows" key as main modifier
+$mainMod = SUPER
 
 bind = $mainMod, I, exec, chromium --ozone-platform=wayland --disable-gpu
 bind = $mainMod, C, exec, code --ozone-platform=wayland --disable-gpu
@@ -233,8 +233,7 @@ bind = , XF86AudioPlay, exec, playerctl play-pause
 bind = , XF86AudioNext, exec, playerctl next
 bind = , XF86AudioPrev, exec, playerctl previous
 
-bind = $mainMod SHIFT, N, exec, killall gammastep
-bind = $mainMod, N, exec, gammastep -O 3000
+bind = $mainMod, N, exec, hyprshade toggle
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
