--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,9 +19,12 @@ bind-key '"' split-window -v -c "#{pane_current_path}"
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 set-option -g status-position top
 set-option -g status-bg default
+set -g base-index 1
+# setw -g mode-keys vi
 
 set -g @catppuccin_window_left_separator ""
 set -g @catppuccin_window_right_separator " "
