--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -49,7 +49,7 @@ $menu = wofi --show drun
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = hyprlock 
-exec-once = waybar & dunst & hyprpaper & 
+exec-once = waybar & dunst & hyprpaper & hypridle &
 exec-once = wl-paste -t text --watch clipman store --no-persist
 
 #############################
@@ -310,6 +310,7 @@ bind = $mainMod SHIFT, L, resizeactive, 100 0
 bind = $mainMod SHIFT, H, resizeactive, -100 0
 bind = $mainMod SHIFT, K, resizeactive, 0 -100
 bind = $mainMod SHIFT, J, resizeactive, 0 100
+bind = $mainMod, M, exec, hyprlock
 
 
 ##############################
