--- a/hypr/.config/hypr/hypridle.conf
+++ b/hypr/.config/hypr/hypridle.conf
@@ -3,7 +3,7 @@ listener {
     on-timeout = hyprlock 
 }
 
-listener {
-    timeout = 330
-    on-timeout = systemctl suspend 
-}
+# listener {
+#     timeout = 330
+#     on-timeout = systemctl suspend 
+# }
