--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -24,7 +24,7 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = eDP-1,preferred,auto,auto
+monitor = eDP-1,1920x1080@120,auto,auto
 monitor = HDMI-A-1,1920x1080@100,auto,auto
 
 ###################
