--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -34,7 +34,7 @@ monitor = HDMI-A-1,1920x1080@100,auto,auto
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = kitty tmux new-session -A -s master
+$terminal = ghostty
 $fileManager = nautilus 
 $menu = wofi --show drun
 
