--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -58,9 +58,9 @@ exec-once = wl-paste -t text --watch clipman store --no-persist
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
-env = XCURSOR_SIZE,24
+env = XCURSOR_SIZE,16
 env = HYPRCURSOR_SIZE,24
-env = GTK_THEME, Adwaita:dark
+env = GTK_THEME, Juno:dark
 env = XDG_CURRENT_DESKTOP = Hyprland
 env = XDG_SESSION_TYP = wayland
 env = XDG_SESSION_DESKTOP = hyprland
