--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,6 +5,7 @@ bind r source-file ~/.tmux.conf
 
 set -g prefix M-s
 set -g mouse on
+set -ga terminal-overrides ",xterm-256color:Tc"
 
 bind-key h select-pane -L
 bind-key j select-pane -D
