--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -191,7 +191,7 @@ device {
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER
 
-bind = $mainMod, I, exec, chromium --ozone-platform=wayland --disable-gpu
+bind = $mainMod, I, exec, librewolf
 bind = $mainMod, C, exec, code --ozone-platform=wayland --disable-gpu
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod SHIFT, Return, exec, $terminal --working-directory "$(pwd)"
