--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -27,7 +27,7 @@ set-option -g status-bg default
 set -g base-index 1
 # setw -g mode-keys vi
 
-set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_status_style "rounded"
 set -g @catppuccin_window_right_separator " "
 set -g @catppuccin_window_middle_separator " █"
 set -g @catppuccin_window_number_position "right"
@@ -39,7 +39,6 @@ set -g @catppuccin_window_current_fill "number"
 set -g @catppuccin_window_current_text "#W"
 
 set -g @catppuccin_status_modules_right "directory session"
-set -g @catppuccin_status_left_separator  " "
 set -g @catppuccin_status_right_separator " "
 set -g @catppuccin_status_fill "icon"
 set -g @catppuccin_status_connect_separator "no"
