--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -24,10 +24,8 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = eDP-1,1920x1080@120,auto,auto
-monitor = HDMI-A-1,1920x1080@75,auto,auto
-
-###################
+monitor = eDP-1,1920x1080@120,auto, auto
+monitor = HDMI-A-1,1920x1080@75, auto, auto
 ### MY PROGRAMS ###
 ###################
 
@@ -49,7 +47,8 @@ $menu = wofi --show drun
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = hyprlock 
-exec-once = waybar & dunst & hyprpaper & hypridle &
+# exec-once = waybar & dunst & hyprpaper & hypridle &
+exec-once = hyprpanel & hyprpaper & hypridle &
 exec-once = wl-paste -t text --watch clipman store --no-persist
 
 #############################
@@ -62,8 +61,15 @@ env = XCURSOR_SIZE,16
 env = HYPRCURSOR_SIZE,24
 env = GTK_THEME, Juno:dark
 env = XDG_CURRENT_DESKTOP = Hyprland
-env = XDG_SESSION_TYP = wayland
+env = XDG_SESSION_TYPE = wayland
 env = XDG_SESSION_DESKTOP = hyprland
+
+env = WLR_RENDERER,vulkan
+
+env = LIBVA_DRIVER_NAME,nvidia
+env = GBM_BACKEND,nvidia-drm
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = WLR_NO_HARDWARE_CURSORS,
 
 #####################
 ### LOOK AND FEEL ###
@@ -191,10 +197,10 @@ device {
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER
 
-bind = $mainMod, I, exec, librewolf
+bind = $mainMod, I, exec, chromium
 bind = $mainMod, C, exec, code --ozone-platform=wayland --disable-gpu
 bind = $mainMod, Return, exec, $terminal
-bind = $mainMod SHIFT, Return, exec, $terminal --working-directory "$(pwd)"
+# bind = $mainMod SHIFT, Return, exec, $terminal --working-directory "$(pwd)"
 bind = $mainMod, KP_Enter, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, E, exit,
