--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -24,8 +24,9 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = eDP-1,1920x1080@120,auto, auto
-monitor = HDMI-A-1,1920x1080@75, auto, auto
+monitor = eDP-1,1920x1080@120,0x0, auto
+monitor = HDMI-A-1,prefered, auto, auto
+# monitor = HDMI-A-1,1920x1080@75, auto, auto
 ### MY PROGRAMS ###
 ###################
 
@@ -33,7 +34,7 @@ monitor = HDMI-A-1,1920x1080@75, auto, auto
 
 # Set programs that you use
 $terminal = ghostty
-$fileManager = nautilus 
+$fileManager = nemo 
 $menu = wofi --show drun
 
 
@@ -65,6 +66,7 @@ env = XDG_SESSION_TYPE = wayland
 env = XDG_SESSION_DESKTOP = hyprland
 
 env = WLR_RENDERER,vulkan
+env = AQ_DRM_DEVICES,/dev/dri/card0:/dev/dri/card1
 
 env = LIBVA_DRIVER_NAME,nvidia
 env = GBM_BACKEND,nvidia-drm
@@ -177,9 +179,9 @@ input {
     }
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = false
+
+opengl {
+	nvidia_anti_flicker = false
 }
 
 # Example per-device config
