--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -1,8 +1,8 @@
 # BACKGROUND
 background {
     monitor =
-    path = ~/.config/hypr/wallpapers/background2.jpg
-    blur_passes = 3
+    path = ~/.config/hypr/wallpapers/palm_city.png
+    blur_passes = 1
     contrast = 0.8916
     brightness = 0.8172
     vibrancy = 0.1696
