--- a/hypr/.config/hypr/hyprpaper.conf
+++ b/hypr/.config/hypr/hyprpaper.conf
@@ -1,10 +1,11 @@
-preload = ~/.config/hypr/wallpapers/background.jpg
-preload = ~/.config/hypr/wallpapers/background2.jpg
-wallpaper = eDP-1, ~/.config/hypr/wallpapers/background.jpg
-wallpaper = HDMI-A-1, ~/.config/hypr/wallpapers/background2.jpg
-#preload = ~/Images/2024-07-03-203703_hyprshot.png
-#preload = ~/Images/2024-07-03-195214_hyprshot.png
-#wallpaper = eDP-1, ~/Images/2024-07-03-203703_hyprshot.png
-#wallpaper = HDMI-A-1, ~/Images/2024-07-03-195214_hyprshot.png
+wallpaper {
+    monitor = eDP-1
+    path = ~/.config/hypr/wallpapers/Pacific Breeze 2 by Hiroshi Nagai (16-9).png
+    fit_mode = cover
+}
 
-splash = false
+wallpaper {
+    monitor = HDMI-A-1
+    path = ~/.config/hypr/wallpapers/tropical_city.png
+    fit_mode = cover
+}
